--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,43 @@
-<h2 id="title">Welcome to Ember</h2>
+<!-- Uses a header that scrolls with the text, rather than staying
+  locked at the top -->
+<div class="mdl-layout mdl-js-layout">
+    <header class="mdl-layout__header mdl-layout__header--scroll">
+        <div class="mdl-layout__header-row">
+            <!-- Title -->
+            <span class="mdl-layout-title">Ember MDL</span>
+            <!-- Add spacer, to align navigation to the right -->
+            <div class="mdl-layout-spacer"></div>
+            <!-- Navigation -->
+            <nav class="mdl-navigation">
+                {{#link-to 'index' class="mdl-navigation__link" }}About{{/link-to}}
+                {{#link-to 'toggles' class="mdl-navigation__link" }}Toggles{{/link-to}}
+                {{#link-to 'buttons' class="mdl-navigation__link" }}Buttons{{/link-to}}
+            </nav>
+        </div>
+    </header>
+    <div class="mdl-layout__drawer">
+        <span class="mdl-layout-title">Ember MDL</span>
+        <nav class="mdl-navigation">
+            {{#link-to 'index' class="mdl-navigation__link" }}About{{/link-to}}
+            {{#link-to 'toggles' class="mdl-navigation__link" }}Toggles{{/link-to}}
+            {{#link-to 'buttons' class="mdl-navigation__link" }}Buttons{{/link-to}}
+        </nav>
+    </div>
+    <main class="mdl-layout__content">
+        <div class="page-content">
+            {{outlet}}
+        </div>
+    </main>
 
-{{outlet}}
+    <footer class="mdl-mega-footer">
+
+        <div class="mdl-mega-footer__bottom-section">
+            <div class="mdl-logo">Title</div>
+            <ul class="mdl-mega-footer__link-list">
+                <li><a href="#">Help</a></li>
+                <li><a href="#">Privacy & Terms</a></li>
+            </ul>
+        </div>
+
+    </footer>
+</div>
