--- a/addon/templates/components/mdl-button.hbs
+++ b/addon/templates/components/mdl-button.hbs
@@ -1,6 +1,4 @@
 {{yield}}
-{{#if ripple}}
-    <span class="mdl-button__ripple-container">
-        {{mdl-ripple}}
-    </span>
+{{#if icon}}
+    <i class="material-icons">{{icon}}</i>
 {{/if}}
