--- a/tests/dummy/app/templates/toggles.hbs
+++ b/tests/dummy/app/templates/toggles.hbs
@@ -1,12 +1,21 @@
+<h3>Toggles</h3>
 
+
+<h4>Radio</h4>
 {{#mdl-radio-group  name="test" as |group|}}
     {{mdl-radio ripple=true group=group value="k" label="Ok k"}}
     {{mdl-radio ripple=true group=group value="a" label="Ok a.."}}
 {{/mdl-radio-group}}
 
+
+<h4>Checkbox</h4>
+
 {{mdl-checkbox ripple=true checked=true label="What."}}
+
+<h4>Switch</h4>
 
 {{mdl-switch ripple=true label="What."}}
 
+<h4>Icon toggle</h4>
 
 {{mdl-icon-toggle ripple=true icon="format_bold" label="What."}}
