--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -1,12 +1,5 @@
 @import 'bower_components/material-design-lite/src/material-design-lite';
+@import 'ember-mdl';
 
-body {
-  overflow: hidden;
-  max-width: 100%;
-  max-height: 100%;
-}
-
-body > div.ember-view:first-of-type {
-  width: 100%;
-  height: 100%;
-}
+// Demo css:
+@import 'demo';
