--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,43 +1,31 @@
-<!-- Uses a header that scrolls with the text, rather than staying
-  locked at the top -->
-<div class="mdl-layout mdl-js-layout">
-    <header class="mdl-layout__header mdl-layout__header--scroll">
-        <div class="mdl-layout__header-row">
-            <!-- Title -->
-            <span class="mdl-layout-title">Ember MDL</span>
-            <!-- Add spacer, to align navigation to the right -->
-            <div class="mdl-layout-spacer"></div>
-            <!-- Navigation -->
-            <nav class="mdl-navigation">
-                {{#link-to 'index' class="mdl-navigation__link" }}About{{/link-to}}
-                {{#link-to 'toggles' class="mdl-navigation__link" }}Toggles{{/link-to}}
-                {{#link-to 'buttons' class="mdl-navigation__link" }}Buttons{{/link-to}}
-            </nav>
-        </div>
-    </header>
-    <div class="mdl-layout__drawer">
+{{#mdl-layout class="mdl-color-text--grey-600"}}
+    {{#mdl-layout-drawer fixed=true}}
         <span class="mdl-layout-title">Ember MDL</span>
         <nav class="mdl-navigation">
             {{#link-to 'index' class="mdl-navigation__link" }}About{{/link-to}}
+            {{#link-to 'layout' class="mdl-navigation__link" }}Layout{{/link-to}}
             {{#link-to 'toggles' class="mdl-navigation__link" }}Toggles{{/link-to}}
             {{#link-to 'buttons' class="mdl-navigation__link" }}Buttons{{/link-to}}
+            {{#link-to 'sliders' class="mdl-navigation__link" }}Sliders{{/link-to}}
+            {{#link-to 'tables' class="mdl-navigation__link" }}Tables{{/link-to}}
+            {{#link-to 'text-fields' class="mdl-navigation__link" }}Text Fields{{/link-to}}
+            {{#link-to 'badges' class="mdl-navigation__link" }}Badges{{/link-to}}
+            {{#link-to 'cards' class="mdl-navigation__link" }}Cards{{/link-to}}
+            {{#link-to 'loading' class="mdl-navigation__link" }}Loading{{/link-to}}
         </nav>
-    </div>
-    <main class="mdl-layout__content">
+
+    {{/mdl-layout-drawer}}
+    {{#mdl-layout-header fixed=true}}
+        <div class="mdl-layout__header-row">
+            <!-- Title -->
+            <span class="mdl-layout-title">Ember MDL</span>
+        </div>
+    {{/mdl-layout-header}}
+    {{#mdl-layout-content}}
+
         <div class="page-content">
             {{outlet}}
         </div>
-    </main>
-
-    <footer class="mdl-mega-footer">
-
-        <div class="mdl-mega-footer__bottom-section">
-            <div class="mdl-logo">Title</div>
-            <ul class="mdl-mega-footer__link-list">
-                <li><a href="#">Help</a></li>
-                <li><a href="#">Privacy & Terms</a></li>
-            </ul>
-        </div>
-
-    </footer>
-</div>
+    {{/mdl-layout-content}}
+{{/mdl-layout}}
+<a href="https://github.com/peec/ember-mdl"><img style="position: absolute; top: 0; right: 0; border: 0; z-index: 9999999;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
