--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -7,6 +7,7 @@
             {{#link-to 'toggles' class="mdl-navigation__link" }}Toggles{{/link-to}}
             {{#link-to 'buttons' class="mdl-navigation__link" }}Buttons{{/link-to}}
             {{#link-to 'sliders' class="mdl-navigation__link" }}Sliders{{/link-to}}
+            {{#link-to 'menus' class="mdl-navigation__link" }}Menus{{/link-to}}
             {{#link-to 'tables' class="mdl-navigation__link" }}Tables{{/link-to}}
             {{#link-to 'text-fields' class="mdl-navigation__link" }}Text Fields{{/link-to}}
             {{#link-to 'badges' class="mdl-navigation__link" }}Badges{{/link-to}}
