Add support for rest

--- a/addon/templates/components/mdl-textfield.hbs
+++ b/addon/templates/components/mdl-textfield.hbs
@@ -5,14 +5,14 @@
         {{#if multiline}}
             {{textarea class="mdl-textfield__input" pattern=pattern rows=rows value=value key-up="checkValid" id=controlId}}
         {{else}}
-            {{input class="mdl-textfield__input" pattern=pattern value=value type="text" key-up="checkValid" id=controlId}}
+            {{input class="mdl-textfield__input" pattern=pattern value=value type=type key-up="checkValid" id=controlId}}
         {{/if}}
     </div>
 {{else}}
     {{#if multiline}}
         {{textarea class="mdl-textfield__input" pattern=pattern rows=rows value=value key-up="checkValid" id=controlId}}
     {{else}}
-        {{input class="mdl-textfield__input" pattern=pattern value=value type="text" key-up="checkValid" id=controlId}}
+        {{input class="mdl-textfield__input" pattern=pattern value=value type=type key-up="checkValid" id=controlId}}
     {{/if}}
     <label class="mdl-textfield__label" for={{controlId}}>{{label}}</label>
 {{/if}}
