--- a/tests/dummy/app/templates/text-fields.hbs
+++ b/tests/dummy/app/templates/text-fields.hbs
@@ -4,7 +4,7 @@
 <!-- Simple Textfield -->
 <form action="#">
     <h5>Text</h5>
-    {{mdl-textfield label="Your name"}}
+    {{mdl-textfield type="text" label="Your name"}}
 
 
     <h5>Numeric</h5>
