--- a/tests/dummy/app/templates/badges.hbs
+++ b/tests/dummy/app/templates/badges.hbs
@@ -1,13 +1,12 @@
 <h3>Badges</h3>
-<!-- Number badge on icon -->
-<span class="material-icons mdl-badge" data-badge="1">account_box</span>
-<!-- Icon badge on icon -->
-<span class="material-icons mdl-badge" data-badge="♥">account_box</span>
 
+<h4>Icon badge</h4>
+{{mdl-badge badge=1 icon="account_box"}}
+<h4>Icon badge with symbol</h4>
+{{mdl-badge badge="♥" icon="account_box"}}
 
+<h4>Text badge</h4>
+{{mdl-badge badge="4" label="Inbox"}}
+<h4>Text badge with symbol</h4>
+{{mdl-badge badge="♥" label="Mood"}}
 
-
-<!-- Number badge -->
-<span class="mdl-badge" data-badge="4">Inbox</span>
-<!-- Icon badge -->
-<span class="mdl-badge" data-badge="♥">Mood</span>
